# rules_go-protobuf-deps-demo

./: MODULE.bazel  README.md  WORKSPACE
go/: go.mod  go.sum  pin_deps.sh  repositories.bzl
go/cmd/example_client/: BUILD.bazel  main.go
go/protodeps/: BUILD.bazel  blank_import.go  doc.go  list_imports.go  protodeps.go  update.sh
proto/: BUILD.bazel  go.mod  go.sum  service.proto
