load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "example_client_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/go/cmd/example_client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:service_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "example_client",
    embed = [":example_client_lib"],
    visibility = ["//visibility:public"],
)
